# EDGEMW

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  SPEC.md  build.sh  codecov.yml  features.md  roadmap.md  shm_ipc.md
.semaphore/: semaphore.yml
cfgd/: config.ds  configd.c
ci/: configd_base_test.sh
common/: edgeos_config.h
common/algorithms/: circular_buff.c  circular_buff.h  list.c  list.h
common/evtloop/: evtloop.c  evtloop.cpp  evtloop.h  evtloop.hpp
common/incl/: error_codes.h
common/linux/crypto/: prng.c  prng.h
common/linux/file_system/: fsapi.c  fsapi.h
common/linux/net/: MasterLoop.hpp  TcpServer.cpp  TcpServer.hpp  net_socket.h  socket.c  sysioctl.c  sysioctl.h
common/linux/net/ds/: sample.c
common/linux/pthreads/: edgeos_pthreads.h  pthreads.c
common/linux/sched/: edgeos_sched.h  sched.c
common/linux/shmem/: shmem.c  shmem.h
common/linux/transport/: controller.c  shtransport.h
common/logger/: edgeos_logger.c  edgeos_logger.h  logger.c
common/memory/: allocate.c  allocate.h
common/tests/: test_TcpServer.cpp  test_distcom.c  test_evtloop.cpp  test_framework.cpp  test_fsapi.cpp  test_list.c  test_socket.c  test_tokparse.cpp
common/util/: TokParse.hpp  csvclass.cpp  csvclass.hpp  csvparse.cpp  csvparse.hpp  errormsg.c  errormsg.h
distcom/: dist_sdp.c  dist_sdp.h  distcom.h  distcomm_pub.c  master.c
examples/: udp_client.c  udp_server.c
gpslib/src/nmea/: nmea_parser.cpp  nmea_parser.hpp
gpslib/src/tests/unit_tests/: unit_core.cpp
inc/: debug.h  evt.hpp  net.h  perf.h
lib/: eos_init.h  init.c
lib/algorithms/: dlist.c  edgeos_dlist.h  edgeos_hashtbl.h  edgeos_list.h  edgeos_queue.h  edgeos_stack.h  edgeos_static_list.h  hashtbl.c  list.c  list.h  queue.c  stack.c  static_list.c
lib/asn1/compiler/: core.cpp  example_asn1.asn  types.c
lib/config/: config_parser.c  config_parser.cpp  config_parser.h  config_parser.hpp  edgeos_config_parser.h  ini_parser.c  json_parser.c  sample_ini.ini
lib/crypto/: aes.c  crypto.c  crypto.h  edgeos_crypto.h  keygen.c  keygen.h
lib/crypto/keys/: devnaga.crt  devnaga_priv.key  secpk256k1-key.pem  secpk256k1-pubkey.pem
lib/evtloop/: edgeos_evtloop.h  evtloop.c  evtloop.h
lib/gpslib/src/nmea/: nmea_parser.cpp
lib/gpslib/src/tests/nmea_data/: nmea12_12_2018_2.txt  nmea_12_12_2018.txt  nmea_12_12_2018_3.txt  nmea_12_12_2018_4.txt
lib/gpslib/src/ublox/: ubx_parser.cpp  ubx_parser.hpp
lib/incl/: edge_os.h
lib/linux/canlib/: vcan.sh
lib/linux/crypto/: edgeos_prng.h  prng.c
lib/linux/date_time/: date_time.c  edgeos_datetime.h
lib/linux/fifo/: edgeos_fifo.h  fifo.c
lib/linux/file_system/: edgeos_fsapi.h  fsapi.c  fsapi.h
lib/linux/monitoring/: edgeos_monitor.h  monitor.c
lib/linux/msgqueue/: edgeos_msg_queue.h  msg_queue.c
lib/linux/net/: ClientMgr.cpp  ClientMgr.hpp  MasterLoop.hpp  TcpServer.cpp  TcpServer.hpp  edgeos_ioctl.h  edgeos_netapi.h  net_socket.h  socket.c  sysioctl.c
lib/linux/net/ds/: controller.c  sample.c
lib/linux/net/ds/spec/: dist_sdp.proto
lib/linux/process/: edgeos_process.h  process.c
lib/linux/pthreads/: edgeos_pthreads.h  pthreads.c
lib/linux/sched/: edgeos_sched.h  sched.c
lib/linux/shmem/: shmem.c  shmem.h
lib/linux/transport/: controller.c  shm_transport.h
lib/logger/: edgeos_logger.c  edgeos_logger.h  logger.c
lib/util/: TokParse.cpp  conv.c  csvclass.cpp  csvclass.hpp  edgeos_conv.h  edgeos_tokparse.h  edgeos_utils.h  hex.c  tokenparse.c  utils.h
libs/: evt.cpp  gpsnmea_parse.c  net.c  net.cpp  net_i.h  perf.c
logsrv/: edgeos_logsrv.cpp
logsrv/tests/: logsrv_test.c
services/cli/: backend.c  backend.h  cli.h  commands.c  commands.md  database.c  rpc.c  rpc.h
services/distcom/: dist_sdp.c  distcom.h  distcomm_pub.c  master.c
services/logsrv/: edgeos_logsrv.cpp
services/logsrv/tests/: logsrv_test.c
services/ota/spec/: ota_comm.pb-c.c  ota_comm.pb-c.h  ota_comm.proto
services/supervisor/: supervisor.c  supervisor.conf  supervisor.h  test_supervisor.c
services/websocket/: websocket.h
testing/: test_logger.py  test_socket.py
tests/: test_TcpServer.cpp  test_config_parser.cpp  test_crypto.c  test_distcom.c  test_dlist.c  test_evtloop.cpp  test_fifo.c  test_framework.cpp  test_fsapi.cpp  test_hashtbl.c  test_list.c  test_monitor.cpp  test_msg_queue.cpp  test_prng.c  test_pthread.c  test_queue.c  test_raw.c  test_sched.c  test_socket.c  test_ssl.c  test_stack.c  test_static_list.c  test_sysioctl.c  transfer_test.c
